--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "@netlify/functions": "^1.4.0",
+    "@types/ms": "^0.7.31",
     "@types/node": "^18.11.18",
     "@types/semver": "^7.3.13",
     "nock": "^13.3.0",
@@ -27,6 +28,7 @@
     "env-paths": "^2.2.1",
     "got": "^12.5.3",
     "lowdb": "^5.1.0",
+    "ms": "^2.1.3",
     "semver": "^7.3.8",
     "word-wrap": "^1.2.3"
   }
